--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button type="button" class="btn btn-primary" id="btnSubmit">
           Submit Quiz
         </button>
-        <button type="button" class="btn btn-primary" id="btnReset" onclick="window.location.reload();"> <!-- Added onclick="window.location.reload();" as it refreshes the page, therefore the quiz refreshes! 😁 -->
+        <button type="button" class="btn btn-primary" id="btnReset">
           Reset Quiz
         </button>
         <span id="score"></span>
